     remains unchanged
   * when overwriting a starting position and undo that action
      only the terrain was undone, not the starting position that's fixed
   * flipping a map over the Y axis no longer resizes the map
   * flipping a map over the X axis uses slightly different filler rules
   * added the paste option to the edit menu
   * added the option to split the terrains is groups
 * graphics
   * improved layering system for terrain graphics
   * fixed terrain selection probabilites (patch #617)
   * stoned units do not use a separate cache
   * no more "darkened" cache. we now overlay terrain/darken.png
   * star shaped "ellipses" for leaders and hero units
   * crown icons for heros and expendable allied leaders.
   * item graphic improvements including animate-able campfire.
   * terrain
     * added peaks to the impassable mountains
     * added bridges crossing swamp and deep water
     * added farmland
   * unit art
     * added a recruit animation for Skeleton
     * added death animations for Orcish Assassin and Grunt, Undead Ghoul,
       Wose Ancient and Elder, Human Outlaw Thief Male and Female
     * changed name on Dwarvish Warrior art files to Dwarvish Steelclad, to conform
       to unit .cfg file name
     * new attack icons : undead axes, undead crossbow, pick axe, glaive
     * new baseframes: White Mage
   * fix gryphon not being in the center of their hex
   * Fixed incorrect WML in some units causing female variations to use male
 * language and i18n:
   * new/updated man pages:
   * updated translations: British English, Catalan, Czech, Danish, Dutch, Estonian,
     French, German, Italian, Russian, Serbian, Slovak, Swedish
   * updated DejaVuSans font to 2.14
   * fixed huge list of spelling mistakes in the en_US version
   * allow sighted messages to be translated with correct plural form (bug #8161)
   * moved the translation for campaign-specific units into the campaign textdomain